deploy/mtls/sentences.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: sentence
    app.kubernetes.io/part-of: sentences
  name: sentences
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: sentence
      app.kubernetes.io/part-of: sentences
  template:
    metadata:
      labels:
        app: sentences
        mode: sentence
        app.kubernetes.io/part-of: sentences
      annotations:
        dummy: '123'
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: sentences
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: sentence
    app.kubernetes.io/part-of: sentences
  name: sentences
spec:
  ports:
  - name: api
    port: 5000
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: sentence
  type: ClusterIP
---
